Add test-vector suite to tests.